--- a/app/layout.ejs
+++ b/app/layout.ejs
@@ -38,7 +38,7 @@
         <li><a href="#"><span class="material-icons">
           question_answer
           </span>Question</a></li>
-        <li><a href="#"><span class="material-icons">
+        <li><a href="main-assignment.html"><span class="material-icons">
           assignment
           </span>Assignment</a></li>
         <li><a href="#"><span class="material-icons">
