--- a/app/assets/style/_main-assignment.scss
+++ b/app/assets/style/_main-assignment.scss
@@ -57,10 +57,8 @@
     display: block;
 }
 .col-5{
-    a{
-        &:hover,&:focus{
-            color: $backgroundGray;
-        }
+    .active{
+        background: $backgroundGray;
     }
 }
 
